@@ -104,6 +104,13 @@ class TemplateStack
         return $this->name;
     }
 
+    public function setName($newName)
+    {
+        $this->xmlroot->setAttribute('name', $newName);
+
+        $this->name = $newName;
+    }
+
     public function isTemplateStack()
     {
         return TRUE;
