@@ -12,6 +12,7 @@ BUGFIX:
 GENERAL:
 * extend different Fawkes and Buckbeak related classes
 * improve bash completion script
+* class TemplateStack | introduce method setName()
 
 
 2.0.54 (20220803)
